# crewai-email-scanner

./: README.md  pyproject.toml  verbose_logs.txt
db/: chroma.sqlite3
src/crewai-email-scanner/: app.py  crew.py  main.py
src/crewai-email-scanner/config/: agents.yaml  approved-recipient.txt  tasks.yaml
src/crewai-email-scanner/templates/: index.html  result.html
src/email_crew_automates_sensitive_data_checking/: crew.py  main.py
src/email_crew_automates_sensitive_data_checking/config/: agents.yaml  tasks.yaml
