[project]
name = "email_crew_automates_sensitive_data_checking"
version = "0.1.0"
description = "email_crew_automates_sensitive_data_checking using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
email_crew_automates_sensitive_data_checking = "email_crew_automates_sensitive_data_checking.main:run"
run_crew = "email_crew_automates_sensitive_data_checking.main:run"
train = "email_crew_automates_sensitive_data_checking.main:train"
replay = "email_crew_automates_sensitive_data_checking.main:replay"
test = "email_crew_automates_sensitive_data_checking.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
